--- a/Eklologiczne Interfejsy i zmienne, typy danych, pętle, ify/index.html
+++ b/Eklologiczne Interfejsy i zmienne, typy danych, pętle, ify/index.html
@@ -13,6 +13,7 @@
 
     <script src="./script.js"></script>
     <script src="./script2.js"></script>
+    <script src="./script3.js"></script>
 </body>
 
 </html>
